Enable preview features for Java 21 and 23 profiles
Co-authored-by: franz1981 <13125299+franz1981@users.noreply.github.com>